--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "typedoc": "^0.20.32"
   },
   "dependencies": {
-    "node": "^15.10.0"
+    "bitwise": "^2.1.0",
+    "node": "^15.10.0",
+    "typescript": "^4.2.3"
   }
 }
